--- a/src/about.html
+++ b/src/about.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <load src="./components/header.html" highlight-about="is-active" />
-    <main></main>
+    <main>
+      <load src="./components/cta.html" />
+    </main>
 
     <load src="./components/footer.html" />
 
