--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,12 @@
               Welcome to a place where creativity meets innovation. Our expert team is dedicated to crafting compelling
               websites, enhancing your brand, and creating impactful solutions to elevate your business.
             </p>
-            <a href="#" class="btn btn_primary hero__btn">
+            <button class="btn btn_primary hero__btn">
               <span class="btn__text">Let’s Discuss Your Project</span>
               <span class="btn__icon btn__icon-arrow">
                 <span class="icon-arrow-right"></span>
               </span>
-            </a>
+            </button>
           </div>
           <div class="section__circle">
             <img src="./assets/img/stamp_btn.svg" alt="icon" />
@@ -756,6 +756,8 @@
     <load src="./components/cta.html" />
 
     <load src="./components/footer.html" />
+
+    <load src="./components/request_popup.html" />
 
     <!--    <script type="module" src="js/scripts.js"></script>-->
     <script type="module" src="js/main.js"></script>
