--- a/src/index.html
+++ b/src/index.html
@@ -751,7 +751,7 @@
         </div>
       </section>
     </main>
-    <load src="./components/testimonials.html" />
+    <!--    <load src="./components/testimonials.html" />-->
 
     <load src="./components/cta.html" />
 
