update home page

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -200,7 +200,7 @@
           fileName.textContent = file.name;
 
           const deleteButton = document.createElement("button");
-          deleteButton.innerHTML = '<span class="icon icon-close-square"></span>';
+          deleteButton.innerHTML = '<span class="icon icon-close"></span>';
           deleteButton.classList.add("btn-del");
           deleteButton.onclick = () => removeFile(index);
 
