--- a/src/index.html
+++ b/src/index.html
@@ -102,58 +102,58 @@
             <div class="services__content">
               <h2 class="services__title">Providing visual <span class="text-color">services</span></h2>
               <div class="accordion">
-                <div class="accordion__item">
-                  <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">01.</span>
-                    <span class="accordion__title h5">Redesign Services</span>
-                    <span class="accordion__icon"><img src="./assets/icons/arrow-down.svg" alt="icon" /></span>
-                  </button>
-                  <div class="accordion__wrapper">
-                    <div class="accordion__content">
-                      <div class="accordion__image">
-                        <img
-                          srcset="./assets/img/services/img-1.jpg 1x, ./assets/img/services/img-1@2x.jpg 2x"
-                          src="./assets/img/services/img-1.jpg"
-                          alt="Redesign Services"
-                        />
-                      </div>
-                      <div class="accordion__content-box">
-                        <h4 class="accordion__content-title">Redesign Services</h4>
-                        <p class="accordion__content-text p-2">
-                          We revitalize your existing digital presence with our comprehensive redesign services. By
-                          modernizing layouts, enhancing functionality, and refreshing visuals, we transform your site
-                          to reflect the latest trends and best practices.
-                        </p>
-                        <ul class="tag__list">
-                          <li class="tag__item p-3">User experience</li>
-                          <li class="tag__item p-3">Modernization</li>
-                          <li class="tag__item p-3">Functionality</li>
-                          <li class="tag__item p-3">Conversion optimization</li>
-                        </ul>
-                        <div class="accordion__footer">
-                          <ul class="accordion__price">
-                            <li class="accordion__price-label">Per Hour</li>
-                            <li class="accordion__price-value">
-                              <h5>$30</h5>
-                            </li>
-                          </ul>
-                          <div class="elem-action">
-                            <a href="#" class="btn btn_secondary accordion__btn">
-                              <span class="btn__text">Let’s Talk</span>
-                              <span class="btn__icon btn__icon-arrow">
-                                <span class="icon-arrow-right"></span>
-                              </span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                <!--                <div class="accordion__item">-->
+                <!--                  <button class="accordion__header" aria-expanded="false">-->
+                <!--                    <span class="accordion__number h5">01.</span>-->
+                <!--                    <span class="accordion__title h5">Redesign Services</span>-->
+                <!--                    <span class="accordion__icon"><img src="./assets/icons/arrow-down.svg" alt="icon" /></span>-->
+                <!--                  </button>-->
+                <!--                  <div class="accordion__wrapper">-->
+                <!--                    <div class="accordion__content">-->
+                <!--                      <div class="accordion__image">-->
+                <!--                        <img-->
+                <!--                          srcset="./assets/img/services/img-1.jpg 1x, ./assets/img/services/img-1@2x.jpg 2x"-->
+                <!--                          src="./assets/img/services/img-1.jpg"-->
+                <!--                          alt="Redesign Services"-->
+                <!--                        />-->
+                <!--                      </div>-->
+                <!--                      <div class="accordion__content-box">-->
+                <!--                        <h4 class="accordion__content-title">Redesign Services</h4>-->
+                <!--                        <p class="accordion__content-text p-2">-->
+                <!--                          We revitalize your existing digital presence with our comprehensive redesign services. By-->
+                <!--                          modernizing layouts, enhancing functionality, and refreshing visuals, we transform your site-->
+                <!--                          to reflect the latest trends and best practices.-->
+                <!--                        </p>-->
+                <!--                        <ul class="tag__list">-->
+                <!--                          <li class="tag__item p-3">User experience</li>-->
+                <!--                          <li class="tag__item p-3">Modernization</li>-->
+                <!--                          <li class="tag__item p-3">Functionality</li>-->
+                <!--                          <li class="tag__item p-3">Conversion optimization</li>-->
+                <!--                        </ul>-->
+                <!--                        <div class="accordion__footer">-->
+                <!--                          <ul class="accordion__price">-->
+                <!--                            <li class="accordion__price-label">Per Hour</li>-->
+                <!--                            <li class="accordion__price-value">-->
+                <!--                              <h5>$30</h5>-->
+                <!--                            </li>-->
+                <!--                          </ul>-->
+                <!--                          <div class="elem-action">-->
+                <!--                            <a href="#" class="btn btn_secondary accordion__btn">-->
+                <!--                              <span class="btn__text">Let’s Talk</span>-->
+                <!--                              <span class="btn__icon btn__icon-arrow">-->
+                <!--                                <span class="icon-arrow-right"></span>-->
+                <!--                              </span>-->
+                <!--                            </a>-->
+                <!--                          </div>-->
+                <!--                        </div>-->
+                <!--                      </div>-->
+                <!--                    </div>-->
+                <!--                  </div>-->
+                <!--                </div>-->
 
                 <div class="accordion__item">
                   <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">02.</span>
+                    <span class="accordion__number h5">01.</span>
                     <span class="accordion__title h5">Web Design</span>
                     <span class="accordion__icon"><img src="./assets/icons/arrow-down.svg" alt="icon" /></span>
                   </button>
@@ -202,7 +202,7 @@
 
                 <div class="accordion__item">
                   <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">03.</span>
+                    <span class="accordion__number h5">02.</span>
                     <span class="accordion__title h5">Mobile App Design</span>
                     <span class="accordion__icon"> <img src="./assets/icons/arrow-down.svg" alt="icon" /></span>
                   </button>
@@ -252,8 +252,8 @@
 
                 <div class="accordion__item">
                   <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">04.</span>
-                    <span class="accordion__title h5">UI/UX Design Audit</span>
+                    <span class="accordion__number h5">03.</span>
+                    <span class="accordion__title h5">UI/UX Audit & Redesign</span>
                     <span class="accordion__icon"><img src="./assets/icons/arrow-down.svg" alt="icon" /></span>
                   </button>
                   <div class="accordion__wrapper">
@@ -266,7 +266,7 @@
                         />
                       </div>
                       <div class="accordion__content-box">
-                        <h4 class="accordion__content-title">UI/UX Design Audit</h4>
+                        <h4 class="accordion__content-title">UI/UX Audit & Redesign</h4>
                         <p class="accordion__content-text p-2">
                           We meticulously analyze your user interface and user experience, identifying areas for
                           improvement and providing actionable recommendations. We help streamline navigation, optimize
@@ -300,7 +300,7 @@
 
                 <div class="accordion__item">
                   <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">05.</span>
+                    <span class="accordion__number h5">04.</span>
                     <span class="accordion__title h5">Markup Development</span>
                     <span class="accordion__icon"><img src="./assets/icons/arrow-down.svg" alt="icon" /></span>
                   </button>
@@ -350,7 +350,7 @@
 
                 <div class="accordion__item">
                   <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">06.</span>
+                    <span class="accordion__number h5">05.</span>
                     <span class="accordion__title h5">CMS Development</span>
                     <span class="accordion__icon"><img src="./assets/icons/arrow-down.svg" alt="icon" /></span>
                   </button>
@@ -398,7 +398,7 @@
 
                 <div class="accordion__item">
                   <button class="accordion__header" aria-expanded="false">
-                    <span class="accordion__number h5">07.</span>
+                    <span class="accordion__number h5">06.</span>
                     <span class="accordion__title h5">Outstaff</span>
                     <span class="accordion__icon">
                       <img src="./assets/icons/arrow-down.svg" alt="icon" />
