update home page

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -31,8 +31,8 @@
                   <span id="email-copy" class="icon-copy" onclick="copyEmail()"></span>
                 </li>
                 <li class="contacts__item">
-                  <span class="icon icon-call"></span
-                  ><a id="phone-number" class="p-1" href="tel:+123455677">+ 1 234 55 677</a>
+                  <span class="icon icon-call"></span>
+                  <a id="phone-number" class="p-1" href="tel:+123455677">+ 1 234 55 677</a>
                   <span id="phone-copy" class="icon-copy" onclick="copyPhoneNumber()"></span>
                 </li>
               </ul>
@@ -178,6 +178,7 @@
         </picture>
       </div>
     </section>
+    <load src="./components/popup-mini.html" />
     <load src="./components/footer.html" />
 
     <script>
