--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,6 @@
       </section>
 
       <section class="section-bg">
-        фц
         <section class="services section">
           <div class="container">
             <div class="services__content">
@@ -322,7 +321,8 @@
                         </p>
                         <ul class="tag__list">
                           <li class="tag__item p-3">Responsive</li>
-                          <li class="tag__item p-3">HTML/CSS</li>
+                          <li class="tag__item p-3">HTML</li>
+                          <li class="tag__item p-3">CSS</li>
                           <li class="tag__item p-3">JS</li>
                           <li class="tag__item p-3">Pixel-Perfect</li>
                           <li class="tag__item p-3">Cross-Browser Compatibility</li>
@@ -429,7 +429,7 @@
                         </ul>
                         <div class="accordion__footer">
                           <ul class="accordion__price">
-                            <li class="accordion__price-label">Per Hour</li>
+                            <li class="accordion__price-label">From</li>
                             <li class="accordion__price-value">
                               <h5>$20</h5>
                             </li>
