add services page

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -79,7 +79,7 @@
                     pattern="[A-Za-z\s]+"
                     required
                   />
-                  <span class="icon-sms icon"></span>
+                  <span class="icon-user-tag icon"></span>
                 </div>
 
                 <div class="input-field">
