--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,7 @@
                             </li>
                           </ul>
                           <div class="elem-action">
-                            <button href="#" class="btn btn_secondary accordion__btn">
+                            <button class="btn btn_secondary accordion__btn">
                               <span class="btn__text">Let’s Talk</span>
                               <span class="btn__icon btn__icon-arrow">
                                 <span class="icon-arrow-right"></span>
@@ -411,7 +411,7 @@
               </div>
 
               <div class="elem-action">
-                <a href="#" class="btn btn_primary accordion__btn">
+                <a href="services.html" class="btn btn_primary">
                   <span class="btn__text">Browse All Services</span>
                   <span class="btn__icon btn__icon-arrow">
                     <span class="icon-arrow-right"></span>
@@ -487,7 +487,7 @@
                 </li>
               </ul>
               <div class="elem-action">
-                <a href="#" class="btn btn_primary cases__btn">
+                <a href="portfolio.html" class="btn btn_primary cases__btn">
                   <span class="btn__text">View All Cases</span>
                   <span class="btn__icon btn__icon-arrow">
                     <span class="icon-arrow-right"></span>
