--- a/src/services.html
+++ b/src/services.html
@@ -367,7 +367,7 @@
               <li class="expertise__item">
                 <div class="expertise__item-header">
                   <h4>72%</h4>
-                  <span class="item-line"></span>
+                  <span class="expertise__item-header-line"></span>
                   <h4>41%</h4>
                 </div>
                 <div class="expertise__item-body">
@@ -382,6 +382,7 @@
               <li class="expertise__item">
                 <div class="expertise__item-header">
                   <h4>40%</h4>
+                  <span class="expertise__item-header-line"></span>
                   <h4>25%</h4>
                 </div>
                 <div class="expertise__item-body">
@@ -395,7 +396,7 @@
               <li class="expertise__item">
                 <div class="expertise__item-header">
                   <h4>50%</h4>
-                  <span class="item-line"></span>
+                  <span class="expertise__item-header-line"></span>
                   <h4>100%</h4>
                 </div>
                 <div class="expertise__item-body">
@@ -412,7 +413,7 @@
               <li class="expertise__item">
                 <div class="expertise__item-header">
                   <h4>72%</h4>
-                  <span class="item-line"></span>
+                  <span class="expertise__item-header-line"></span>
                   <h4>41%</h4>
                 </div>
                 <div class="expertise__item-body">
@@ -426,7 +427,7 @@
               <li class="expertise__item">
                 <div class="expertise__item-header">
                   <h4>40%</h4>
-                  <span class="item-line"></span>
+                  <span class="expertise__item-header-line"></span>
                   <h4>25%</h4>
                 </div>
                 <div class="expertise__item-body">
@@ -440,6 +441,7 @@
               <li class="expertise__item">
                 <div class="expertise__item-header">
                   <h4>50%</h4>
+                  <span class="expertise__item-header-line"></span>
                   <h4>100%</h4>
                 </div>
                 <div class="expertise__item-body">
